{BUG} #403 - Ajout d'une overflow-x:auto; dans l'admin_content pour eviter les d?bordement.

--- a/templates/default/theme/admin_design.css
+++ b/templates/default/theme/admin_design.css
@@ -93,6 +93,7 @@ div#admin_contents {
     background:#FFFFFF;
     border:1px #BEBEBE solid;
     border-bottom:2px solid #99B1CB;
+    overflow-x:auto;
 }
 
 html>body div#admin_contents {
